--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libs/PHPThumb"]
-	path = libs/PHPThumb
+[submodule "Vendor/PHPThumb"]
+	path = Vendor/PHPThumb
 	url = http://github.com/masterexploder/PHPThumb.git
